[gd_scene load_steps=9 format=3 uid="uid://bewk7c4ceer0n"]

[ext_resource type="Script" path="res://Player/light_projectile.gd" id="1_4h2cm"]
[ext_resource type="Texture2D" uid="uid://b7v22u7tlykhw" path="res://art/player_art/PurpleLight.png" id="1_mkphh"]
[ext_resource type="AudioStream" uid="uid://cf1n87fpb8wbi" path="res://art/sounds/LightProjectile.wav" id="3_p1x5m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kr332"]
radius = 28.0179

[sub_resource type="Gradient" id="Gradient_27fr3"]
offsets = PackedFloat32Array(0, 0.668831)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yiasu"]
gradient = SubResource("Gradient_27fr3")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_nr8mc"]
offsets = PackedFloat32Array(0, 0.668831)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dffdd"]
gradient = SubResource("Gradient_nr8mc")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="LightProjectile" type="Area2D"]
process_mode = 1
script = ExtResource("1_4h2cm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kr332")

[node name="Light" type="PointLight2D" parent="."]
scale = Vector2(9, 9)
color = Color(0.807843, 0.568627, 1, 1)
energy = 0.6
shadow_filter = 1
shadow_filter_smooth = 3.0
texture = SubResource("GradientTexture2D_yiasu")

[node name="Shadow" type="PointLight2D" parent="."]
scale = Vector2(9, 9)
color = Color(0.807843, 0.568627, 1, 1)
energy = 0.39
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 3.0
texture = SubResource("GradientTexture2D_dffdd")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_mkphh")

[node name="OffScreenTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LightProjectileAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_p1x5m")
bus = &"SFX"

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="OffScreenTimer" to="." method="_on_off_screen_timer_timeout"]
